force-app/main/default/objects/Okta_Attributes__c/Okta_Attributes__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Okta Attributes</label>
</CustomObject>