force-app/main/default/objects/Okta_Attributes__c/fields/Customer_User_AppId__c.field-meta.xml
<CustomField>
    <fullName>Customer_User_AppId__c</fullName>
    <label>Customer User AppId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>