force-app/main/default/objects/Okta_Attributes__c/fields/Disable_User_Sync__c.field-meta.xml
<CustomField>
    <fullName>Disable_User_Sync__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable User Sync</label>
    <type>Checkbox</type>
</CustomField>