force-app/main/default/objects/Okta_Attributes__c/fields/Forgot_Password__c.field-meta.xml
<CustomField>
    <fullName>Forgot_Password__c</fullName>
    <label>Forgot Password</label>
    <length>255</length>
    <type>Text</type>
</CustomField>