force-app/main/default/objects/Okta_Attributes__c/fields/Okta_Base_URL__c.field-meta.xml
<CustomField>
    <fullName>Okta_Base_URL__c</fullName>
    <label>Okta Base URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>