force-app/main/default/objects/Okta_Attributes__c/fields/Partner_User_AppId__c.field-meta.xml
<CustomField>
    <fullName>Partner_User_AppId__c</fullName>
    <label>Partner User AppId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>