force-app/main/default/objects/Okta_Attributes__c/fields/PortalSAMLUrl__c.field-meta.xml
<CustomField>
    <fullName>PortalSAMLUrl__c</fullName>
    <label>PortalSAMLUrl</label>
    <length>255</length>
    <type>Text</type>
</CustomField>