force-app/main/default/objects/Okta_Attributes__c/listViews/view_all.listView-meta.xml
<ListView>
    <fullName>view_all</fullName>
    <columns>NAME</columns>
    <columns>Okta_Base_URL__c</columns>
    <columns>Access_Token__c</columns>
    <columns>Customer_User_AppId__c</columns>
    <columns>Group_Id__c</columns>
    <columns>Partner_User_AppId__c</columns>
    <columns>PortalSAMLUrl__c</columns>
    <columns>Disable_User_Sync__c</columns>
    <columns>Forgot_Password__c</columns>
    <filterScope>Everything</filterScope>
    <label>view all</label>
</ListView>